[wrapper-tracing] Clear reporter after lazy cleanup

Fixes the crasher in DCHECK(!m_reporter) on the trace wrappables fyi bot.

BUG=chromium:656276
R=haraken@chromium.org,hlopko@chromium.org

Review-Url: https://codereview.chromium.org/2427493002
Cr-Commit-Position: refs/heads/master@{#425642}

Former-commit-id: da671132ddc13821713064b41ca4b65cd7e44865